<resources>
    <string name="arg_movie" translatable="false">arg_movie</string>
    <string name="TMDb_api_key" translatable="false">b7993f2c6ebcaed5a6882a8c80f16de6</string>
    <string name="TMDb_api_access_token" translatable="false">eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiJiNzk5M2YyYzZlYmNhZWQ1YTY4ODJhOGM4MGYxNmRlNiIsInN1YiI6IjYwNDJhNzQ2OTljOTY0MDA2ZWY4NWRhYiIsInNjb3BlcyI6WyJhcGlfcmVhZCJdLCJ2ZXJzaW9uIjoxfQ.BxrDZ-XqEI5pkjm5qO8mFcnuo7aq5o0kbIy8xj7_lRI</string>


    <string name="app_name">TMDb</string>
    <string name="movies">Movies</string>
    <string name="search">Search</string>
    <string name="summary">Summary</string>
    <string name="popularity_score">Popularity score</string>
    <string name="release_date">Release date</string>
    <string name="no_data_available">No data available</string>
    <string name="cannot_connect_to_the_server">Cannot connect to the server</string>
    <string name="empty_response_received">Empty response received</string>
    <string name="genre">Genre</string>
    <string name="no_more_results">No more results</string>
</resources>