<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MovieDetailsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMovieDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabPlay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_play"
                    tools:ignore="ContentDescription,RtlHardcoded" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ScrollView
                        android:id="@+id/scrollViewBackdrop"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:scrollbars="none">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imgBackdrop"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:adjustViewBounds="true"
                                android:scaleType="fitCenter"
                                app:srcCompat="@drawable/movie_backdrop_placeholder" />
                        </LinearLayout>
                    </ScrollView>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="40dp" />

                </LinearLayout>

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/genre"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/txtGenre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/no_data_available"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/release_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/txtReleaseDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/no_data_available"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/popularity_score"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/txtPopularity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/no_data_available"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/summary"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/txtSummary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/no_data_available"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>